--- a/MBLog/app/src/main/res/layout/activity_main.xml
+++ b/MBLog/app/src/main/res/layout/activity_main.xml
@@ -16,12 +16,12 @@
         android:layout_marginRight="20dp"
         android:text="Log" />
 
-
     <Button
         android:id="@+id/btn_github"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
         android:text="Github" />
 </LinearLayout>
